Fixed the side bar on mobile for the blue theme

--- a/static/css/mobile.css
+++ b/static/css/mobile.css
@@ -25,9 +25,6 @@
         position: absolute;
         top: 0;
         left: -250px;
-        color: #fff;
-        font-family: 'Raleway', sans-serif;
-        background-color: #000;
     }
 
     .nav-item a {
